[package]
name = "leaf_complex_r"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for analyzing leaf morphology from PNG images"
readme = "README.md"
license = "MIT"

[dependencies]
# Core image processing
image = "0.24.7"
imageproc = "0.23.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# CSV output
csv = "1.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Optional: parallelism for batch processing
rayon = "1.8"

# Path finding and geometry
bresenham = "0.1.1"
nalgebra = "0.32.3"

# Basic GUI using minifb (simple framebuffer, cross-platform)
minifb = "0.24"

[dev-dependencies]
# Unit testing utilities
assert_approx_eq = "1.1.0"

[profile.release]

debug = true  # Include debug symbols
opt-level = 2  # Use a slightly lower optimization level (3 is max)
codegen-units = 1  # Slower compilation but more thorough optimizations